--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,12 +19,14 @@
             >
 
             <Button
+                android:id="@+id/buttonList"
                 android:layout_width="206dp"
                 android:layout_height="50dp"
                 android:insetTop="0dp"
                 android:insetBottom="0dp"
                 android:text="List View" />
             <Button
+                android:id="@+id/buttonGrid"
                 android:layout_width="206dp"
                 android:layout_height="50dp"
                 android:insetTop="0dp"
@@ -33,10 +35,10 @@
                 />
         </LinearLayout>
 
-<!--        <ListView-->
-<!--            android:id="@+id/listView"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"/>-->
+        <ListView
+            android:id="@+id/listView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
         <GridView
             android:id="@+id/gridView"
